Se modificaron las secciones para que sean responsive y se cambio el color de fondo y de los textos

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -27,7 +27,7 @@
     padding-left: 15px !important;
     position: relative;
     z-index: 999;
-    background: rgba(0, 0, 0, 0.1) !important;
+    background: black !important;
     backdrop-filter: blur(10px) !important;
 }
 
