--- a/src/styles/bodyhome.css
+++ b/src/styles/bodyhome.css
@@ -7,8 +7,8 @@
 }
 
 body {
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
     font-family: "Roboto", sans-serif;
 }
 
@@ -33,13 +33,14 @@ body {
     padding-top: 4%;
 }
 .about {
+    font-size: larger;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    align-items: center;
     flex-direction: row;
-    height: 100vh;
     width: 100%;
-    padding: 30px 0 30px;
-    width: 100%;
+    min-height: 100vh;
+    padding: 30px 0 100px;
 }
 .portfolio {
     display: flex;
@@ -54,12 +55,11 @@ body {
     width: 25vw;
 }
 .about_description {
-    padding-top: 30vh;
     width: 50%;
     padding-right: 10vw;
 }
-.about_skills{
-    padding-top: 30vh;
+.about_skills {
+    padding-top: 7vh;
 }
 .profile-image {
     margin-right: 20px;
@@ -68,7 +68,13 @@ body {
     border-radius: 50%;
     object-fit: cover;
 }
-
+.about_title {
+    font-size: 3rem;
+    padding-bottom: 1rem;
+}
+.about_title2{
+    font-size: 2rem;
+}
 .home_text1,
 .home_text2,
 .home_text3 {
@@ -96,4 +102,16 @@ body {
 .skills_grid {
     display: flex;
     flex-direction: row;
+}
+@media (max-width: 721px) {
+    .profile-image {
+        display: none;
+    }
+    .about {
+        flex-direction: column;
+    }
+    .about_description {
+        width: 50%;
+        padding-right: 10vw;
+    }
 }
