--- a/src/styles/bodyhome.css
+++ b/src/styles/bodyhome.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Just+Another+Hand&family=Kanit:wght@500&family=Open+Sans:ital,wght@0,400;1,300&family=Poppins&family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Just+Another+Hand&family=Kanit:wght@500&family=Open+Sans:ital,wght@0,400;1,300&family=Poppins&family=Raleway:wght@700&family=Roboto:wght@100;300;400&display=swap");
 
 * {
     margin: 0;
@@ -22,7 +23,7 @@ body {
     justify-content: center;
     padding-top: 20vh;
     flex-direction: row;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     z-index: 0;
     background-size: cover;
@@ -72,7 +73,7 @@ body {
     font-size: 3rem;
     padding-bottom: 1rem;
 }
-.about_title2{
+.about_title2 {
     font-size: 2rem;
 }
 .home_text1,
@@ -93,6 +94,11 @@ body {
     color: #ffffff;
     font-size: 2.5em;
 }
+.description {
+    font-family: "Roboto";
+    font-size: 16px;
+    line-height: 2.5;
+}
 .skill_item {
     padding: 20px;
 }
@@ -104,14 +110,40 @@ body {
     flex-direction: row;
 }
 @media (max-width: 721px) {
+    .home {
+        display: flex;
+    }
+    .homebg {
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
     .profile-image {
-        display: none;
+        margin-right: 0;
+        margin-bottom: 10px;
+        max-width: 50%;
+        max-height: 50%;
+        border-radius: 50%;
+        object-fit: cover;
+    }
+    .home_text2 {
+        font-family: "Roboto", sans-serif;
+        color: #007bff;
+        font-weight: 700;
+        font-size: 2rem;
+    }
+    
+    .home_text3 {
+        font-family: sans-serif;
+        color: #ffffff;
+        font-size: 2rem;
     }
     .about {
         flex-direction: column;
     }
     .about_description {
-        width: 50%;
+        width: 60%;
         padding-right: 10vw;
     }
 }
