--- a/src/styles/bodyhome.css
+++ b/src/styles/bodyhome.css
@@ -1,5 +1,6 @@
 /* Estilos generales */
 @import url("https://fonts.googleapis.com/css2?family=Just+Another+Hand&family=Kanit:wght@500&family=Open+Sans:ital,wght@0,400;1,300&family=Poppins&family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap");
+
 :root {
     --blue: #3367d6;
     --white: #ffffff;
@@ -48,8 +49,8 @@ body {
 
 .profile-image {
     margin-right: 20px;
-    max-width: 17vw;
-    max-height: 17vw;
+    max-width: 30vh;
+    max-height: 30vh;
     border-radius: 50%;
     object-fit: cover;
 }
@@ -85,7 +86,7 @@ body {
 }
 
 .about_skills {
-    padding-top: 7vh;
+    padding-top: 40px;
 }
 
 .about_title {
@@ -104,10 +105,13 @@ body {
 }
 
 .skill_item {
-    padding: 20px;
+    padding-left: 20px;
+    height: 100px;
 }
 
 .skill_item_logo {
+    object-fit: contain;
+    min-height: 50px;
     width: 40px;
 }
 
@@ -115,6 +119,7 @@ body {
     display: flex;
     flex-direction: row;
 }
+
 .download-button {
     display: inline-block;
     padding: 10px 20px;
@@ -129,6 +134,7 @@ body {
 .download-button:hover {
     background-color: var(--gray);
 }
+
 /* Estilos de la sección "Portafolio" */
 .portfolio {
     display: flex;
@@ -141,6 +147,7 @@ body {
 }
 
 .image-portfolio {
+    border-radius: 8px;
     width: 25vw;
 }
 
@@ -154,7 +161,7 @@ body {
     left: 50%;
     bottom: 0%;
     transform: translateX(-50%);
-    background-color: #414141;
+    background-color: rgb(0, 0, 0);
     color: #fff;
     width: 100%;
     text-align: center;
@@ -179,20 +186,24 @@ body {
 .project-link:hover {
     color: #3367d6;
 }
+
 .description-container {
     width: 100%;
 }
+
 .description-port {
     padding-left: 50px;
 }
 
 /* Estilos de la sección "Contacto" */
 .contact-me {
-    padding: 150px 0 100px;
+    padding: 120px 0 100px;
 }
+
 .contact-me-container {
     padding: 3rem;
 }
+
 .plain-link {
     text-decoration: none;
     color: inherit;
@@ -210,11 +221,23 @@ body {
 .contact-icon:hover {
     filter: grayscale(100%);
 }
-.contact-me-text{
+
+.contact-me-text {
     padding-left: 50px;
 }
+
 /* Media queries */
-@media (max-width: 721px) {
+@media (min-width: 991px) {
+    .image-portfolio {
+        width: 250px;
+    }
+
+    .mt-2 {
+        width: 250px;
+        position: absolute;
+    }
+}
+@media (max-width: 991px) {
     .home {
         display: flex;
     }
@@ -229,8 +252,8 @@ body {
     .profile-image {
         margin-right: 0;
         margin-bottom: 10px;
-        max-width: 50%;
-        max-height: 50%;
+        max-width: 30vh;
+        max-height: 30vh;
         border-radius: 50%;
         object-fit: cover;
     }
@@ -246,6 +269,62 @@ body {
         font-family: sans-serif;
         color: #ffffff;
         font-size: 2rem;
+    }
+}
+
+@media (min-width: 721px) and (max-width: 991px) {
+    .image-portfolio {
+        width: 230px;
+    }
+
+    .mt-2 {
+        width: 230px;
+        position: absolute;
+    }
+}
+
+@media (min-width: 575px) and (max-width: 721px) {
+    .image-portfolio {
+        width: 250px;
+    }
+
+    .mt-2 {
+        position: absolute;
+        background-color: rgb(0, 0, 0);
+        color: #fff;
+        justify-content: center;
+        width: 250px;
+        border-bottom-left-radius: 8px;
+        border-bottom-right-radius: 8px;
+    }
+
+    .about {
+        flex-direction: column;
+    }
+
+    .about_description {
+        width: 60%;
+        padding-right: 30px;
+    }
+}
+
+@media (max-width: 575px) {
+    .mt-2-container {
+        padding: 1rem;
+    }
+
+    .image-portfolio {
+        width: 70vw;
+    }
+
+    .mt-2 {
+        position: absolute;
+        background-color: rgb(0, 0, 0);
+        color: #fff;
+        justify-content: center;
+        width: 70vw;
+        border-bottom-left-radius: 8px;
+        border-bottom-right-radius: 8px;
     }
 
     .about {
