--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -6,7 +6,6 @@
     font-family: "Raleway", sans-serif;
 }
 
-
 .nav-link {
     background-color: transparent !important;
     font-family: "Poppins", sans-serif;
@@ -20,24 +19,32 @@
         color 0.3s ease !important;
 }
 .nav-link:hover {
-    color: #007bff !important;
+    color: #fabc5d !important;
 }
 
 .navbarmain {
     padding-left: 15px !important;
-    position: relative;
+    position: fixed; 
+    width: 100%; 
+    top: 0;
     z-index: 999;
     background: black !important;
     backdrop-filter: blur(10px) !important;
 }
 
 .navbar-image {
-    height: 40px;
+    height: 60px;
     cursor: pointer;
+    object-fit: cover;
+    transition:
+        transform 0.3s ease,
+        filter 0.3s ease;
 }
 
 .navbar-image:hover {
-    transform: scale(1.3);
+    transform: scale(1.5);
     filter: brightness(1.5);
 }
-
+.nav-link-scrolled {
+    color: #fabc5d !important;
+}
