Se modifico la hoja de estilos para pantallas movile(colores), ahora los link de navegacion de la barra en dispositivos mobiles al hacerle click (elegir una seccion ej contanto) se contraen para mejorar la experiencia del usuario

--- a/src/styles/bodyhome.css
+++ b/src/styles/bodyhome.css
@@ -277,7 +277,7 @@ body {
 
     .home_text2 {
         font-family: "Roboto", sans-serif;
-        color: #3367d6;
+        color: var(--gold);
         font-weight: 700;
         font-size: 2rem;
     }
